--- a/your-code/challenge-2_AN.ipynb
+++ b/your-code/challenge-2_AN.ipynb
@@ -33,24 +33,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "\n"
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Importing the dataset from the 'data' folder\n",
-    "\n"
+    "\n",
+    "path = r'D:\\Data Science\\Ironhack\\GitHub\\Week 2\\lab-df-calculation-and-transformation\\data\\Pokemon.csv'\n",
+    "\n",
+    "df = pd.read_csv(path)\n",
+    "pokemon = df.copy()\n",
+    "\n",
+    "pokemon.head()"
    ]
   },
   {
@@ -77,11 +227,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hypothesis 1a is accepted, therefore we can reject the null hypothesis and also the second hypothesis H2.\n",
+      "Total field is computed by summing all other values HP, Attack, Defense, Sp. Atk, Sp. Def, and Spee\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "# H1 = Total is computed by summing of all fields { HP, Attack, Defense, Sp. Atk, Sp. Def, and Speed.}\n",
+    "# H2 = Total is computed by mean of all fields { HP, Attack, Defense, Sp. Atk, Sp. Def, and Speed.}\n",
+    "\n",
+    "# H1o: sum(HP, Attack, Defense, Sp. Atk, Sp. Def, and Speed) != Total\n",
+    "# H1a: sum(HP, Attack, Defense, Sp. Atk, Sp. Def, and Speed) = Total\n",
+    "\n",
+    "# H2o: mean(HP, Attack, Defense, Sp. Atk, Sp. Def, and Speed) != Total\n",
+    "# H2a: mean(HP, Attack, Defense, Sp. Atk, Sp. Def, and Speed) = Total)\n",
+    "\n",
+    "h1 = pokemon['HP'] + pokemon['Attack'] + pokemon['Defense'] + pokemon['Sp. Atk'] + pokemon['Sp. Def'] + pokemon['Speed'] == pokemon['Total']\n",
+    "\n",
+    "h1.unique()\n",
+    "\n",
+    "print(\"Hypothesis 1a is accepted, therefore we can reject the null hypothesis and also the second hypothesis H2.\")\n",
+    "print(\"Total field is computed by summing all other values HP, Attack, Defense, Sp. Atk, Sp. Def, and Spee\")"
    ]
   },
   {
@@ -119,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -432,13 +607,20 @@
        "[800 rows x 18 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "dummies_type1 = pd.get_dummies(pokemon['Type 1'])\n",
+    "dummies_type2 = pd.get_dummies(pokemon['Type 2'])\n",
+    "\n",
+    "dummies = dummies_type1 + dummies_type2\n",
+    "\n",
+    "dummies"
    ]
   },
   {
@@ -460,40 +642,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Bug        -0.145781\n",
-       "Dark        0.056154\n",
+       "Total       1.000000\n",
        "Dragon      0.229705\n",
-       "Electric    0.020971\n",
-       "Fairy      -0.036698\n",
-       "Fighting    0.077786\n",
-       "Fire        0.078726\n",
-       "Flying      0.059383\n",
-       "Ghost       0.003641\n",
-       "Grass      -0.052592\n",
-       "Ground      0.015060\n",
-       "Ice         0.060248\n",
-       "Normal     -0.105331\n",
-       "Poison     -0.090441\n",
        "Psychic     0.124688\n",
-       "Rock        0.032731\n",
        "Steel       0.109703\n",
+       "Fire        0.078726\n",
+       "Fighting    0.077786\n",
+       "Ice         0.060248\n",
+       "Flying      0.059383\n",
+       "Dark        0.056154\n",
+       "Rock        0.032731\n",
+       "Electric    0.020971\n",
+       "Ground      0.015060\n",
+       "Ghost       0.003641\n",
        "Water      -0.021665\n",
-       "dtype: float64"
+       "Fairy      -0.036698\n",
+       "Grass      -0.052592\n",
+       "Poison     -0.090441\n",
+       "Normal     -0.105331\n",
+       "Bug        -0.145781\n",
+       "Name: Total, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "dummies[\"Total\"] = pokemon[\"Total\"]\n",
+    "dummies_correlation_with_total = dummies.corr()[\"Total\"].sort_values(ascending=False)\n",
+    "\n",
+    "dummies_correlation_with_total\n",
+    "\n",
+    "# The type that is most likely to have the highest Total is \"Dragon\", because he has 0.23 positive correlation.\n",
+    "\n"
    ]
   },
   {
@@ -511,7 +702,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "# Dragon-Psychic"
    ]
   }
  ],
@@ -531,7 +724,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
